--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -30,4 +30,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-distribution-id: ${{ secrets.AWS_DISTRIBUTION_ID }}
       - name: Deploy app build to S3 bucket
-        run: aws s3 sync ./dist/ s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container --delete
+        run: aws s3 sync ./dist/ s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest --delete
